--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.21.3",
     "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
